// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Draftling component renders a .Draftling by default 1`] = `
<div
  className="individualCard"
>
  <Link
    to="/draftling/undefined"
  >
    <div
      className="card-header"
    >
      <div
        className="card-title"
      >
        <h2 />
      </div>
    </div>
    <div
      className="card-summary"
    >
      ,
      <br />
      <br />
    </div>
    <div
      className="card-meta"
    >
      Created: 
      Invalid Date
    </div>
  </Link>
</div>
`;

exports[`Draftling component renders the Draftling given props 1`] = `
<div
  className="individualCard"
>
  <Link
    to="/draftling/13"
  >
    <div
      className="card-header"
    >
      <div
        className="card-title"
      >
        <h2>
          test-draftling
        </h2>
      </div>
    </div>
    <div
      className="card-summary"
    >
      sixWordStory
      ,
      <br />
      Horror
      <br />
    </div>
    <div
      className="card-meta"
    >
      Created: 
      Fri Jul 17 2020
    </div>
  </Link>
</div>
`;
